fix(core): dialog z-index so high

--- a/core/src/components/base/Dialog.scss
+++ b/core/src/components/base/Dialog.scss
@@ -3,7 +3,7 @@ dialog.ppd-dialog {
   --max-height: 80vh;
   --min-height: 40vh;
 
-  z-index: 114514;
+  z-index: 1000;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
